# RotaScop

./: readme.md
rotascope-core/: Cargo.toml
rotascope-core/src/: lib.rs
rotascope-core/src/shared/: mod.rs  protocol.rs
rotascope-server/: Cargo.toml  config.json
rotascope-server/src/: CrossPlatformCapturer.rs  ScreenCapturer.rs  capture.rs  main.rs  server.rs  virtual_display.rs
rotascope_app/: README.md  pubspec.yaml
rotascope_app/android/app/: build.gradle.kts
rotascope_app/android/app/src/main/: AndroidManifest.xml
rotascope_app/android/app/src/main/kotlin/com/example/rotascope_app/: MainActivity.kt
rotascope_app/android/gradle/wrapper/: gradle-wrapper.properties
rotascope_app/ios/Runner/: Info.plist
rotascope_app/ios/Runner.xcodeproj/: project.pbxproj
rotascope_app/lib/: app.dart  main.dart
rotascope_app/lib/model/: video_frame.dart
rotascope_app/lib/screens/: remote_screen.dart
rotascope_app/lib/services/: connection_service.dart  sensor_service.dart
rotascope_app/lib/widgets/: connection_panel.dart  display_hud.dart  display_view.dart
rotascope_app/linux/: CMakeLists.txt
rotascope_app/linux/runner/: my_application.cc
rotascope_app/macos/Runner.xcodeproj/: project.pbxproj
rotascope_app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
rotascope_app/macos/Runner/Configs/: AppInfo.xcconfig
rotascope_app/test/: widget_test.dart
rotascope_app/web/: index.html  manifest.json
rotascope_app/windows/: CMakeLists.txt
rotascope_app/windows/runner/: Runner.rc  main.cpp
