[package]
name = "rotascope-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "2"
anyhow = "1.0"
image = "0.25"
x11rb = "0.13" # Linux 屏幕捕获
windows = "0.62" # Windows API
env_logger = "0.11"
log = "0.4"
rotascope-core = {path = "../rotascope-core"}
tokio-util = { version = "0.7.17", features = ["codec"] }
futures = "0.3"
screenshots = "0.7"

[profile.release]
strip = true
lto = true
panic = "abort"
opt-level = "z"
codegen-units = 1