[package]
name = "rotascope-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "2"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
image = "0.25"
x11rb = "0.13" # Linux 屏幕捕获
windows = "0.62" # Windows API
rotascope-core = {path = "../rotascope-core"}
tokio-util = { version = "0.7.17", features = ["codec"] }
futures = "0.3"
screenshots = "0.7"
rand = "0.9.2"
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3"
parking_lot = "0.12.5"
actix-web = "4.4"
actix = "0.13"
actix-rt = "2.9"
actix-web-actors = "4.3.1+deprecated"

# 平台特定的虚拟显示器支持
[target.'cfg(windows)'.dependencies]
windows = { version = "0.48", features = [
    "Win32_Devices_Display",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
] }
[profile.release]
strip = true
lto = true
panic = "abort"
opt-level = "z"
codegen-units = 1